--- a/1st one.html
+++ b/1st one.html
@@ -7,6 +7,7 @@
     </head>
     <link rel="stylesheet" href="1st one.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://github.com/AadarshaThapaMagar/1HTML.github.io.git">
     <body bgcolor="black">
         <header>
             <nav>
